--- a/Boo 4IDIP/index.html
+++ b/Boo 4IDIP/index.html
@@ -1,75 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Document</title>
-    </head>
-    <body>
-        <header>
-        <img src="picture/Logo.png" alt="Logo">
-            <ul>
-                <a href="https://krunker.io" target="_blank">Home</a>
-                <a href="https://krunker.io" target="_blank">help</a>
 
-            </ul>
-        </header>
-        <main>
-            <section>
-                <h1>Welcome to Hecane the real time Auction Website</h1>
-                <img src="picture/Mainpagebackground1.png" alt="colorful background">
-                <img src="picture/MainPageBackground2.png" alt="A lady sit while drink a coffee with a ">
-                <img src="picture/Overall background.png" alt="white brick">
-                <h3>Auction is a great way to sell your items. You can reah a wide audirnce of potential buyers and get the bast price possible. We havr made it easy for you to create an auction Website that attract visiters. All you havr to do is fill out our from and we will  create your aution site for you.</h3>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karantina&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
 
-                <h1>Start Here</h1>
-
-                <h3>Our webpage will forcus on capitalism, who give us more money the object will be your!</h3>
-
-                <h3>Try to purchase with your phycology skill to get cheap price, our webside have chat for comunicate while you stay in the room.</h3>
-
-                <h3>Have fun!!!</h3>
+<body>
+    <header>
+        <ul>
+            <a href="https://krunker.io" target="_blank">Home</a>
+            <a href="https://krunker.io" target="_blank">inputter</a>
+            <a href="https://krunker.io" target="_blank">Coutumer</a>
+        </ul>
+        <img src="picture/Logo.png" alt="Logo">1
+        <ul>
+            <a href="https://krunker.io" target="_blank">Log In</a>
+            <a href="https://krunker.io" target="_blank">Sing In</a>
+        </ul>
+    </header>
+    <main>
+        <section1>
+            <h1>Welcome to Hecane the real time Auction Website</h1>
+            <img src="picture/Mainpagebackground1.png" alt="colorful background">
+            <img src="picture/MainPageBackground2.png" alt="A lady sit while drink a coffee with a ">
+            <img src="picture/Overall background.png" alt="white brick">
+            <h3>Auction is a great way to sell your items. You can reah a wide audirnce of potential buyers and get the
+                bast price possible. We havr made it easy for you to create an auction Website that attract visiters.
+                All you havr to do is fill out our from and we will create your aution site for you.</h3>
+            <h1>Start Here</h1>
+            <h3>Our webpage will forcus on capitalism, who give us more money the object will be your!</h3>
+            <h3>Try to purchase with your phycology skill to get cheap price, our webside have chat for comunicate while
+                you stay in the room.</h3>
+            <h3>Have fun!!!</h3>
             </section>
             <section>
                 <h3>!!Most poplar!!</h3>
                 <img src="picture/Overall background.png" alt="white brick">
                 <img src="picture/Section2P1.png" alt="Macallan 1926">
                 <h3>1,990 USD</h3>
-
                 <h3>Time left 1.45.54/h</h3>
-
                 <h3>Chat</h3>
-
                 <h3>Ben:cool</h3>
-
                 <h3> Pampam : what is this</h3>
-
                 <h3> TJ : this prize is crazy</h3>
-
                 <img src="picture/Section2P2.png" alt="">
-
                 <h3>499 USD</h3>
-
                 <h3>Time left 1.45.54/h</h3>
-
                 <h3>Chat</h3>
-
                 <h3>AI :how is this even here</h3>
-
                 <h3>Jonh :Lthis is one of the bast out there</h3>
-                
-                <h3>Deaw : yes! I got it</h3>               
+                <h3>Deaw : yes! I got it</h3>
             </section>
             <section>
                 <h1>Top seller that have been sell</h1>
-
                 <img src="picture/Section3P1.png" alt="">
                 <img src="picture/Overall background.png" alt="white brick">
-
-                <h3>The final price is 1,050,000 USD</h3>  
-                
+                <h3>The final price is 1,050,000 USD</h3>
                 <h1>Click Here To Find Out What More</h1>
             </section>
             <section>
@@ -80,24 +73,26 @@
                 <img src="picture/Section4P3.png" alt="20% off">
                 <img src="picture/Section4P4.png" alt="And many more">
                 <h2>Click here to find out what more</h2>
+                <p class="exmarks">!!</p>
+                <p class="exmarks">!!</p>
             </section>
     </main>
 
     <footer>
         <h3>About us</h3>
-                <h3>Term and policy</h3>
-                <h3>Contact us</h3>
-                <img src="picture/facebook.svg" alt="facebook icon"/> 
-                <img src="picture/IG.png" alt="Instragram icon">
-                <img src="picture/Twich.png" alt="Twich icon">
-                <img src="picture/Tictoc.png" alt="Tictoc icon">
-                <h3>Team</h3>
-                <h3>Future plan</h3>
-                <h3>Term</h3>
-                <h3>Policy</h3>
-                <h3>#Hecate_Auction</h3>
-                <img src="picture/Phone.png" alt="Phone icon">
-                <h3>#66+ 0954916464</h3>
+        <h3>Term and policy</h3>
+        <h3>Contact us</h3>
+        <img src="picture/facebook.svg" alt="facebook icon" />
+        <img src="picture/IG.png" alt="Instragram icon">
+        <img src="picture/Twich.png" alt="Twich icon">
+        <img src="picture/Tictoc.png" alt="Tictoc icon">
+        <h3>Team</h3>
+        <h3>Future plan</h3>
+        <h3>Term</h3>
+        <h3>Policy</h3>
+        <h3>#Hecate_Auction</h3>
+        <img src="picture/Phone.png" alt="Phone icon">
+        <h3>#66+ 0954916464</h3>
     </footer>
 </body>
 </html>
