--- a/Boo 4IDIP/index.html
+++ b/Boo 4IDIP/index.html
@@ -15,13 +15,13 @@
 <body>
     <header>
         <div class="container">
-            <ul>
+            <ul class="first-ul">
                 <a href="" target="_blank">Home</a>
                 <a href="" target="_blank">inputter</a>
                 <a href="" target="_blank">Coutumer</a>
             </ul>
-            <img src="picture/Logo.png" alt="Logo" width=250.1px;>
-            <ul>
+            <img class="main-logo" src="picture/Logo.png" alt="Logo" width=250.1px;>
+            <ul class="second-ul">
                 <a href="" target="_blank">Log In</a>
                 <a href="" target="_blank">Sing In</a>
             </ul>
@@ -35,7 +35,7 @@
                 bast price possible. We havr made it easy for you to create an auction Website that attract
                 visiters.
                 All you havr to do is fill out our from and we will create your aution site for you.</h3>
-            <h1>Start Here</h1>
+            <h2>Start Here</h1>
         </section>
 
         <section class="section-two">
@@ -44,10 +44,10 @@
             <h3>Our webpage will forcus on capitalism, who give us more money the object will be your!</h3>
             <h3>Try to purchase with your phycology skill to get cheap price, our webside have chat for
                 comunicatewhileyou stay in the room.</h3>
-            <h3>Have fun!!!</h3>
+            <h3>Have fun!!</h3>
         </section>
 
-        <section class="Most_Popular">
+        <section class="most_popular">
             <h3>!!Most poplar!!</h3>
             <img src="picture/Section2P1.png" alt="Macallan 1926">
             <h3>1,990 USD</h3>
@@ -65,14 +65,14 @@
             <h3>Deaw : yes! I got it</h3>
         </section>
 
-        <section class="Top_Seller">
+        <section class="top_seller">
             <h1>Top seller that have been sell</h1>
             <img src="picture/Section3P1.png" alt="">
             <h3>The final price is 1,050,000 USD</h3>
             <h1>Click Here To Find Out What More</h1>
         </section>
 
-        <section class="Promotion">
+        <section class="promotion">
             <h3>Promotion</h3>
             <img src="picture/Section4P1.png" alt="Don't miss!">
             <img src="picture/Section4P2.png" alt="Free shiping">
