--- a/Boo 4IDIP/index.html
+++ b/Boo 4IDIP/index.html
@@ -29,22 +29,25 @@
     </header>
     <main>
         <section class="section-one">
-            <h1>Welcome to Hecane the real time Auction Website</h1>
-            <h3>Auction is a great way to sell your items. You can reah a wide audirnce of potential buyers and get
+                <h1>Welcome to Hecane the real time Auction Website</h1>
+                <h3>Auction is a great way to sell your items. You can reah a wide audirnce of potential buyers and get
                 the
                 bast price possible. We havr made it easy for you to create an auction Website that attract
                 visiters.
                 All you havr to do is fill out our from and we will create your aution site for you.</h3>
-            <h2>Start Here</h1>
+                <div class="st">
+                    <h2>Start Here</h1>
+                </div>
         </section>
 
-        <section class="section-two">
-            <img class="image2" src="picture/MainPageBackground2.png" alt="A lady sit while drink a coffee with a "
-                width="730" height="402">
-            <h3>Our webpage will forcus on capitalism, who give us more money the object will be your!</h3>
-            <h3>Try to purchase with your phycology skill to get cheap price, our webside have chat for
-                comunicatewhileyou stay in the room.</h3>
+        <section class="infomation">
+            <img class="image2" src="picture/MainPageBackground2.png" alt="A lady sit while working on laptop with a coffee"width="730" height="402">
+            <div class="info-text">           
+            <h4>Our webpage will forcus on capitalism, who give us more money the object will be your!</h4>
+            <h4>Try to purchase with your phycology skill to get cheap price, our webside have chat for
+                comunicatewhileyou stay in the room.</h4>
             <h3>Have fun!!</h3>
+            </div>
         </section>
 
         <section class="most_popular">
@@ -74,10 +77,10 @@
 
         <section class="promotion">
             <h3>Promotion</h3>
-            <img src="picture/Section4P1.png" alt="Don't miss!">
-            <img src="picture/Section4P2.png" alt="Free shiping">
-            <img src="picture/Section4P3.png" alt="20% off">
-            <img src="picture/Section4P4.png" alt="And many more">
+            <img src="picture/Section4P1.png" alt="Don't miss!"width="250" height="200">
+            <img src="picture/Section4P2.png" alt="Free shiping"width="600" height="304">
+            <img src="picture/Section4P3.png" alt="20% off"width="250" height="250">
+            <img src="picture/Section4P4.png" alt="And many more"width="730" height="300">
             <h2>Click here to find out what more</h2>
             <p class="exmarks">!!</p>
             <p class="exmarks">!!</p>
@@ -85,20 +88,27 @@
     </main>
 
     <footer>
-        <h3>About us</h3>
-        <h3>Term and policy</h3>
-        <h3>Contact us</h3>
-        <img src="picture/facebook.svg" alt="facebook icon" />
-        <img src="picture/IG.png" alt="Instragram icon">
-        <img src="picture/Twich.png" alt="Twich icon">
-        <img src="picture/Tictoc.png" alt="Tictoc icon">
-        <h3>Team</h3>
-        <h3>Future plan</h3>
-        <h3>Term</h3>
-        <h3>Policy</h3>
-        <h3>#Hecate_Auction</h3>
-        <img src="picture/Phone.png" alt="Phone icon">
-        <h3>#66+ 0954916464</h3>
+        <div>
+            <h3>About us</h3>
+            <h3>Term and policy</h3>
+            <h3>Contact us</h3>
+        </div>
+        <div>
+            <h3>Team</h3>
+            <h3>Future plan</h3>
+            <h3>Term</h3>
+            <h3>Policy</h3>
+        </div>
+        <div>
+            <h3>#Hecate_Auction</h3>
+            <img src="picture/facebook.svg" alt="facebook icon"width="50" height="50" />
+            <img src="picture/IG.png" alt="Instragram iconwidth="50" height="50">
+            <img src="picture/Twich.png" alt="Twich icon"width="50" height="50">
+            <img src="picture/Tictoc.png" alt="Tictoc icon"width="50" height="50">
+            <img src="picture/Phone.png" alt="Phone icon"width="50" height="50">
+            <h3>#66+ 0954916464</h3>
+        </div>
+        
     </footer>
 </body>
 </html>
