--- a/Boo 4IDIP/index.html
+++ b/Boo 4IDIP/index.html
@@ -17,18 +17,18 @@
         <div class="container">
             <ul class="first-ul">
                 <a href="" target="_blank">Home</a>
-                <a href="" target="_blank">inputter</a>
-                <a href="" target="_blank">Coutumer</a>
+                <a href="" target="_blank">Browse</a>
+                <a href="" target="_blank">Customers</a>
             </ul>
             <img class="main-logo" src="picture/Logo.png" alt="Logo" width=250.1px;>
             <ul class="second-ul">
                 <a href="" target="_blank">Log In</a>
-                <a href="" target="_blank">Sing In</a>
+                <a href="" target="_blank">Sign Up</a>
             </ul>
         </div>
     </header>
 
-<!--------------- End of header -------------->
+    <!--------------- End of header -------------->
 
     <main>
         <section class="section-one">
@@ -37,30 +37,34 @@
                     <h1>Welcome to Hecane the real time Auction Website</h1>
                 </li>
                 <li class="welcome-text">
-                    <h3>Auction is a great way to sell your items. You can reah a wide audirnce of potential buyers and getthebast price possible. We havr made it easy for you to create an auction Website that attractvisiters.All you havr to do is fill out our from and we will create your aution site for you.</h3>
-                </li>  
+                    <h3>Auctions on our website are a great way to sell your items.
+                        We have many customers that are eager to see what you have for sale!
+                    </h3>
+                </li>
             </div>
-                <div class="st">
-                    <h2>Start Here</h1>
-                </div>
+            <div class="st">
+                <h2>Start Here</h1>
+            </div>
         </section>
 
-<!--------------- End of Section-one -------------->
+        <!--------------- End of Section-one -------------->
 
         <section class="infomation">
-            <img class="image2" src="picture/MainPageBackground2.png" alt="A lady sit while working on laptop with a coffee"width="730" height="402">
-            <div class="info-text">           
-                <h4>Our webpage will forcus on capitalism, who give us more money the object will be your!</h4>
-                <h4>Try to purchase with your phycology skill to get cheap price, our webside have chat forcomunicatewhileyou stay in the room.</h4>
-                <h3>Have fun!!</h3>
+            <img class="image2" src="picture/MainPageBackground2.png"
+                alt="A lady sit while working on laptop with a coffee" width="730" height="402">
+            <div class="info-text">
+                <h4>Our webpage will forcus on giving you the best items you could possibly buy!</h4>
+                <h4>Try to bargain so you can get a cheap price, our website has a chat
+                    for talking to sellers while you stay in the room.</h4>
+                <h3>Good luck!</h3>
             </div>
         </section>
 
-<!--------------- End of infomation ---------------->
+        <!--------------- End of infomation ---------------->
 
         <section class="most_popular">
             <div class="popular">
-                <h3>!!Most poplar!!</h3>
+                <h3>Best sellers!</h3>
             </div>
             <div class="mp-text">
                 <div class="mpt1">
@@ -79,16 +83,16 @@
                     </div>
                 </div>
                 <div class="mpt2">
-                        <img src="picture/Section2P2.png" width="250" height="200">
+                    <img src="picture/Section2P2.png" width="250" height="200">
                     <div class="mp-text2">
-                        <h3>Sell to Deaw</h3>
+                        <h3>Sold to Deaw!</h3>
                         <h3>Time left -/h</h3>
                     </div>
                     <div class="chat2">
                         <h2>Chat</h2>
                         <div chat-popular2>
                             <h3>AI :how is this even here</h3>
-                            <h3>Jonh :Lthis is one of the bast out there</h3>
+                            <h3>Jonh :this is one of the best out there</h3>
                             <h3>Deaw : yes! I got it</h3>
                         </div>
                     </div>
@@ -96,63 +100,76 @@
             </div>
         </section>
 
-<!------------------ End of Popular -------------------->
+        <!------------------ End of Popular -------------------->
 
         <section class="top_seller">
-            <h3>Top seller that have been sell</h3>
+            <h3>Sold recently</h3>
             <div class="main-info-for-tp">
                 <img src="picture/Section3P1.png" width="300" height="250">
                 <h3>The final price is 1,050,000 USD</h3>
             </div>
-            
+
         </section>
 
-<!---------------- End of Top Seller ------------------>
+        <!---------------- End of Top Seller ------------------>
 
         <section class="promotion">
             <div class="pm">
                 <h3>Promotion</h3>
             </div>
             <div class="promotion-picture">
-                <img src="picture/Section4P1.png" alt="Don't miss!"width="250" height="200">
-                <img src="picture/Section4P2.png" alt="Free shiping"width="600" height="304">
-                <img src="picture/Section4P3.png" alt="20% off"width="250" height="250">
-                <img src="picture/Section4P4.png" alt="And many more"width="730" height="300">
+                <div class="promotion-p1">
+                    <img src="picture/Section4P1.png" alt="Don't miss!" width="250" height="200">
+                    <img src="picture/Section4P2.png" alt="Free shiping" width="600" height="304">
+                    <img src="picture/Section4P3.png" alt="20% off" width="250" height="250">
+                </div>
+                <div class="promotion-p2">
+                    <img src="picture/Section4P4.png" alt="And many more" width="530" height="250">
+                </div>
             </div>
             <div class="promotion-text">
-                <h2>Click here to find out what more</h2>
                 <p class="exmarks">!!</p>
+                <h2>Click here to find out what else</h2>
                 <p class="exmarks">!!</p>
             </div>
-            
         </section>
     </main>
 
-<!---------------- End of Promotion------------------>
+    <!---------------- End of Promotion------------------>
 
     <footer>
-        <div>
+        <div class="footer-about-us">
             <h3>About us</h3>
+            <div class="line">
+            </div>
             <h3>Term and policy</h3>
             <h3>Contact us</h3>
         </div>
-        <div>
+        <div class="footer-our-team">
             <h3>Team</h3>
+            <div class="line">
+            </div>
             <h3>Future plan</h3>
             <h3>Term</h3>
             <h3>Policy</h3>
         </div>
-        <div>
+        <div class="footer-contact">
+            <h3>Contact</h3>
+            <div class="line">
+            </div>
             <h3>#Hecate_Auction</h3>
-            <img src="picture/facebook.svg" alt="facebook icon"width="50" height="50" />
-            <img src="picture/IG.png" alt="Instragram iconwidth="50" height="50">
-            <img src="picture/Twich.png" alt="Twich icon"width="50" height="50">
-            <img src="picture/Tictoc.png" alt="Tictoc icon"width="50" height="50">
-            <img src="picture/Phone.png" alt="Phone icon"width="50" height="50">
-            <h3>#66+ 0954916464</h3>
+            <img src="picture/facebook.svg" alt="facebook icon" width="50" height="50" />
+            <img src="picture/IG.png" alt="Instragram iconwidth=" 50" height="50">
+            <img src="picture/Twich.png" alt="Twich icon" width="50" height="50">
+            <img src="picture/Tictoc.png" alt="Tictoc icon" width="50" height="50">
+            <div class="number">
+                <h3>#66+ 0954916464</h3>
+                <img src="picture/Phone.png" alt="Phone icon" width="50" height="50">
+            </div>
         </div>
     </footer>
 </body>
+
 </html>
 
 <!---------------- End of footer ------------------>
